# travelagent_openai

./: README.md  pyproject.toml
src/travelai_openai/: crew.py  main.py  travel.md
src/travelai_openai/config/: agents.yaml  tasks.yaml
src/travelai_openai/tools/: custom_tool.py
