[project]
name = "travelai_openai"
version = "0.1.0"
description = "travelai_openai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "pydantic>=2.10.6",
]

[project.scripts]
travelai_openai = "travelai_openai.main:run"
run_crew = "travelai_openai.main:run"
train = "travelai_openai.main:train"
replay = "travelai_openai.main:replay"
test = "travelai_openai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
